[package]
name = "dephy-pproxy"
version = "0.1.1"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = "4.5.4"
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
litep2p = { git = "https://github.com/Ma233/litep2p.git", rev = "144d81c" }
# Do not upgrade multiaddr, see: https://github.com/paritytech/litep2p/pull/91
multiaddr = "0.17.1"
prost = "0.13.1"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tokio-util = "0.7.11"
tonic = "0.12.1"
tonic-web = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12.1"

[[bin]]
name = "pproxy"
path = "src/main.rs"
